@@ -1,3 +1,8 @@
+2012-12-22  Karl Berry  <karl@gnu.org>
+
+	* util/Makefile.am (EXTRA_DIST): add *.bat.  Report from Eli,
+	22 Dec 2012 17:33:58.
+
 2012-12-19  Patrice Dumas  <pertusus@free.fr>
 
 	* configure.ac, tp/Texinfo/*, tp/t/*: use the correct next version 
